<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tvVaccineProvider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvUserName"
            android:hint="@string/vaccine_provider"
            android:textSize="18sp" />

        <!--Add Titles for columns here -->

        <!--Dose 1-->
        <TextView
            android:id="@+id/tvDose1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvVaccineProvider"
            android:padding="5dp"
            android:text="@string/dose_1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvDose1Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvVaccineProvider"
            android:layout_toEndOf="@+id/tvDose1"
            android:hint="@string/dose_1_date"
            android:padding="5dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvDose1Num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvVaccineProvider"
            android:layout_toEndOf="@id/tvDose1Date"
            android:hint="@string/dose_1_num"
            android:padding="5dp"
            android:textSize="16sp" />

        <!--Dose 2-->
        <TextView
            android:id="@+id/tvDose2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:padding="5dp"
            android:text="@string/dose_2"
            android:layout_below="@id/tvDose1"/>

        <TextView
            android:id="@+id/tvDose2Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDose1Date"
            android:layout_toEndOf="@id/tvDose2"
            android:hint="@string/dose_2_date"
            android:padding="5dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvDose2Num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDose1Date"
            android:layout_toEndOf="@id/tvDose2Date"
            android:hint="@string/dose_2_num"
            android:padding="5dp"
            android:textSize="16sp" />

        <!--Booster-->
        <TextView
            android:id="@+id/tvBooster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:padding="5dp"
            android:text="@string/booster"
            android:layout_below="@id/tvDose2"/>

        <TextView
            android:id="@+id/tvBoosterDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDose2Date"
            android:layout_toEndOf="@id/tvBooster"
            android:hint="@string/booster_date"
            android:padding="5dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvBoosterNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDose2Date"
            android:layout_toEndOf="@id/tvBoosterDate"
            android:hint="@string/booster_num"
            android:padding="5dp"
            android:textSize="16sp" />


        <!--should be users vaccination card-->

        <ImageView
            android:id="@+id/ivVaccinePhoto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/tvBoosterNum"
            android:layout_alignParentStart="true"
            android:layout_marginStart="114dp"
            android:layout_marginTop="5dp" />

        <Switch
            android:id="@+id/sApprovalSwitch"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:allowUndo="true"
            android:text="@string/approved"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            tools:targetApi="m" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>