<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/login_background">

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etUsername"
        android:layout_below="@+id/tvSignIn"
        android:hint="@string/username"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="#30ffffff"
        android:drawablePadding="20dp"
        android:autofillHints="Username"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:layout_below="@+id/etUsername"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="#30ffffff"
        android:drawablePadding="20dp"
        android:inputType="textPassword"
        android:autofillHints="Password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:backgroundTint="@color/teal_700"
        android:text="@string/login_button"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:backgroundTint="@color/teal_700"
        android:text="@string/sign_up"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>


</RelativeLayout>